--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@tailwindcss/vite": "^4.0.0",
+    "chart.js": "^4.4.8",
+    "jspdf": "^3.0.0",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
